[package]
name = "stealthereum-cli"
version = "0.4.3"
edition = "2021"
authors = ["kassandra.eth 0xDADA@protonmail.com"]
license = "MIT"
description = "CLI for ERC-5564 compliant stealth address management on evm chains"
readme = "README.md"
homepage = "https://github.com/kassandraoftroy/stealthereum-cli"
repository = "https://github.com/kassandraoftroy/stealthereum-cli"
keywords = ["ethereum", "eth", "privacy", "stealth", "secp256k1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
eth-stealth-addresses = "0.1.0"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.7"
rpassword = "7.2.0"
rand = "0.8.5"
dirs = "6.0.0"
tokio = { version = "1.42.0", features = ["full"] }
alloy = { version = "0.9.2", features = ["full"] }
alloy-signer-local = { version = "0.9.2", features = ["keystore"] }

[[bin]]
edition = "2021"
name = "stealthereum"
path = "src/main.rs"
